deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/Outreach_Recipient__c.object-meta.xml
<CustomObject>
    <label>Outreach Recipient</label>
    <pluralLabel>Outreach Recipients</pluralLabel>
    <nameField>
        <label>Recipient Number</label>
        <type>AutoNumber</type>
        <displayFormat>OR-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per person ever mailed by MDU outreach. Exists to make duplicate sending impossible, not to hold data. A row here is a permanent block on mailing that address again.</description>
</CustomObject>