deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach Recipients</relationshipLabel>
    <relationshipName>Outreach_Recipients</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent Contact seen at this address. Informational only. Three addresses in the Omaha set have two Contact records each, which is exactly why the key is the address and not this lookup.</description>
</CustomField>