deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/fields/Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Key__c</fullName>
    <label>Email Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <inlineHelpText>Set by OutreachEmailKey.normalise. Do not edit by hand.</inlineHelpText>
    <description>Normalised recipient address. Unique so that two reps confirming overlapping batches in the same second cannot both claim the same person: the platform rejects the second insert with DUPLICATE_VALUE. A query is not a substitute for this constraint. Case insensitive because normalisation already lowercases, and belt and braces is cheap here.</description>
</CustomField>