deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/fields/First_Mailed_At__c.field-meta.xml
<CustomField>
    <fullName>First_Mailed_At__c</fullName>
    <label>First Mailed At</label>
    <type>DateTime</type>
    <description>Stamped when a send succeeds, not when the recipient is claimed. A claim that never sends leaves this null.</description>
</CustomField>