deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/fields/Last_Batch__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch__c</fullName>
    <label>Last Batch</label>
    <type>Lookup</type>
    <referenceTo>Outreach_Batch__c</referenceTo>
    <relationshipLabel>Recipients Claimed</relationshipLabel>
    <relationshipName>Claimed_Recipients</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which batch claimed this recipient. Added in the object model's second deploy because a lookup cannot deploy before its target object exists.</description>
</CustomField>