deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Recipient__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Claimed means reserved by a batch but not yet delivered. Mailed is terminal. Bounced means nothing was delivered, so a corrected address becomes a new key and is claimable again.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Claimed</fullName><default>true</default><label>Claimed</label></value>
            <value><fullName>Mailed</fullName><default>false</default><label>Mailed</label></value>
            <value><fullName>Bounced</fullName><default>false</default><label>Bounced</label></value>
            <value><fullName>Opted Out</fullName><default>false</default><label>Opted Out</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>